--- a/style.css
+++ b/style.css
@@ -16,29 +16,6 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
 }
 
 /* START OF PROJECT */
@@ -101,20 +78,103 @@ table {
 	position: absolute;
 	font-family: Norse-Bold, sans-serif;
 	color: white;
-	font-size: 11vw;
+	font-size: 9vw;
 	line-height: 0;
 }
 
 .form {
 	display: flex;
 	flex-direction: column;
+	justify-content: space-around;
+}
+
+.back_section {
+	margin-left: 2vw;
+}
+
+form {
+	margin: 0vw 2vw 0vw 2vw
 }
 
 .front_section {
 	display: flex;
+	flex-direction: column;
 	background-color: white;
+	height: 26vw;
+	box-shadow: 0 7px 12px -2px rgb(197, 197, 197);
+}
+
+
+fieldset {
+	display: flex;
+	flex-direction: row;
+	gap: 12vw;
+	margin-top: 2vw;
 }
 
 .back_section {
 	display: flex;
+	flex-direction: column;
+	gap: 1vw;
+	justify-content: flex-start;
+	margin-left: 2vw;
 }
+
+a {
+	text-decoration: none;
+}
+
+.text_box {
+	display: flex;
+	flex-direction: column;
+	gap: 1.5vw;
+	justify-content: center;
+	align-content: center;
+	padding: 2vw 8vw 0vw 0vw;
+}
+
+.form_text, legend {
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 1.1vw;
+}
+
+button {
+	background-color: #596D48;
+	/* Green */
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	border-radius: 0.5vw;
+}
+
+legend {
+	margin-top: 2vw;
+	font-size: 2vw;
+}
+
+label {
+	font-family: Helvetica, Arial, sans-serif;
+	text-transform: uppercase;
+	font-size: 1vw;
+}
+
+input {
+	background-color: #FFFFFF;
+	border: 1px solid #D6D9DC;
+	border-radius: 3px;
+	width: 100%;
+	padding: 0.5vw 1.5vw;
+	font-size: 14px;
+}
+
+.column_input {
+	display: flex;
+	flex-direction: column;
+	gap: 2vw;
+}
+
